--- a/bugs/index.html
+++ b/bugs/index.html
@@ -12,13 +12,13 @@
   <link href="/css/footer.css" rel="stylesheet" type="text/css" />
   <link href="/css/buttons.css" rel="stylesheet" type="text/css" />
   <link href="./style.css" rel="stylesheet" type="text/css" />
-  <link href="https://raw.githubusercontent.com/STForScratch/ScratchTools/main/extras/icon128.png" rel="icon" />
+  <link href="https://raw.githubusercontent.com/STForScratch/ScratchTools/main/extras/icons/icon128.png" rel="icon" />
 </head>
 
 <body>
   <div class="navbar">
     <a href="/">
-    <img src="https://github.com/STForScratch/ScratchTools/blob/main/extras/icon128.png?raw=true" class="logo">
+    <img src="https://raw.githubusercontent.com/STForScratch/ScratchTools/main/extras/icons/icon128.png?raw=true" class="logo">
     </a>
     <span></span>
       <a href="/">
