translations + fix logo

--- a/features/index.html
+++ b/features/index.html
@@ -4,7 +4,14 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Features | ScratchTools</title>
+  <title>Features | ScratchTools</title><link rel="alternate" hreflang="en" href="https://scratchtools.app">
+<link rel="alternate" hreflang="es" href="https://es.scratchtools.app">
+<script type="text/javascript" src="https://cdn.weglot.com/weglot.min.js"></script>
+<script>
+    Weglot.initialize({
+        api_key: 'wg_9325b34a437855d3b25bd13564216e5f3'
+    });
+</script>
   <link href="/css/style.css" rel="stylesheet" type="text/css" />
   <link href="/css/navbar.css" rel="stylesheet" type="text/css" />
   <link href="/css/banner.css" rel="stylesheet" type="text/css" />
@@ -18,7 +25,7 @@
 <body class="small-banner">
   <div class="navbar">
     <a href="/">
-    <img src="https://github.com/STForScratch/ScratchTools/blob/main/extras/icon128.png?raw=true" class="logo">
+    <img src="https://raw.githubusercontent.com/STForScratch/ScratchTools/main/extras/icons/icon128.png" class="logo">
     </a>
     <span></span>
       <a href="/">
